--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -25,7 +25,7 @@ kairosdb.jetty.static_web_root=webroot
 #kairosdb.jetty.basic_auth.password=
 
 #===============================================================================
-kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
+#kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
 kairosdb.datastore.concurrentQueryThreads=5
 #kairosdb.service.datastore=org.kairosdb.datastore.cassandra.CassandraModule
 #kairosdb.service.datastore=org.kairosdb.datastore.remote.RemoteModule
@@ -40,8 +40,8 @@ kairosdb.datastore.h2.database_path=build/h2db
 #===============================================================================
 #Cassandra properties
 #host list is in the form> 1.1.1.1:9160,1.1.1.2:9160
-kairosdb.datastore.cassandra.host_list=localhost:9160
-kairosdb.datastore.cassandra.replication_factor=1
+kairosdb.datastore.cassandra.host_list=${CASS_HOSTS}
+kairosdb.datastore.cassandra.replication_factor=${REPFACTOR}
 kairosdb.datastore.cassandra.write_delay=1000
 kairosdb.datastore.cassandra.write_buffer_max_size=500000
 #When reading one row read in 10k
