--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -26,8 +26,8 @@ kairosdb.jetty.static_web_root=webroot
 
 #===============================================================================
 #kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
-kairosdb.datastore.concurrentQueryThreads=5
-#kairosdb.service.datastore=org.kairosdb.datastore.cassandra.CassandraModule
+#kairosdb.datastore.concurrentQueryThreads=5
+kairosdb.service.datastore=org.kairosdb.datastore.cassandra.CassandraModule
 #kairosdb.service.datastore=org.kairosdb.datastore.remote.RemoteModule
 
 #this module is built using the code at https://github.com/brianhks/opentsdb
@@ -35,7 +35,7 @@ kairosdb.datastore.concurrentQueryThreads=5
 
 #===============================================================================
 #H2 properties
-kairosdb.datastore.h2.database_path=build/h2db
+#kairosdb.datastore.h2.database_path=build/h2db
 
 #===============================================================================
 #Cassandra properties
