Make ports configurable.
Add readme.

--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -1,4 +1,4 @@
-kairosdb.telnetserver.port=4242
+kairosdb.telnetserver.port=${PORT_TELNET}
 
 kairosdb.service.telnet=org.kairosdb.core.telnet.TelnetServerModule
 kairosdb.service.http=org.kairosdb.core.http.WebServletModule
@@ -11,7 +11,7 @@ kairosdb.reporter.schedule=0 */1 * * * ?
 
 #===============================================================================
 # Set to 0 to turn off HTTP port
-kairosdb.jetty.port=8080
+kairosdb.jetty.port=${PORT_HTTP}
 kairosdb.jetty.static_web_root=webroot
 
 # To enable SSL uncomment the following lines and specify the path to the keyStore and its password and port
@@ -118,8 +118,8 @@ kairosdb.query_cache.cache_file_cleaner_schedule=0 0 12 ? * SUN *
 #Turn the carbon endpoint on by uncommenting the following line
 kairosdb.service.carbon=org.kairosdb.core.carbon.CarbonServerModule
 kairosdb.carbon.tagparser=org.kairosdb.core.carbon.HostTagParser
-kairosdb.carbon.text.port=2003
-kairosdb.carbon.pickle.port=2004
+kairosdb.carbon.text.port=${PORT_CARBON_TEXT}
+kairosdb.carbon.pickle.port=${PORT_CARBON_PICKLE}
 
 #Determins the size of the buffer to allocate for incoming pickles
 kairosdb.carbon.pickle.max_size=2048
