update kairosdb version to 1.1.0
also allow to set cassandra read/write consistency levels via environment variables

--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -64,10 +64,10 @@ kairosdb.datastore.cassandra.string_cache_size=5000
 kairosdb.datastore.cassandra.increase_buffer_size_schedule=0 */5 * * * ?
 
 # Controls the read and write consistency levels for cassandra operations
-kairosdb.datastore.cassandra.data_read_consistency_level=ONE
-kairosdb.datastore.cassandra.data_write_consistency_level=QUORUM
-kairosdb.datastore.cassandra.index_read_consistency_level=ONE
-kairosdb.datastore.cassandra.index_write_consistency_level=QUORUM
+kairosdb.datastore.cassandra.data_read_consistency_level=${READ_CONSISTENCY_DATA}
+kairosdb.datastore.cassandra.data_write_consistency_level=${WRITE_CONSISTENCY_DATA}
+kairosdb.datastore.cassandra.index_read_consistency_level=${READ_CONSISTENCY_INDEX}
+kairosdb.datastore.cassandra.index_write_consistency_level=${WRITE_CONSISTENCY_INDEX}
 
 #for cassandra authentication use the following
 #kairosdb.datastore.cassandra.auth.[prop name]=[prop value]
