Add kairos cassandra key as env variable
Minor fix ups

Signed-off-by: Ken Herner <ken@astronomer.io>

--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -66,9 +66,9 @@ kairosdb.datastore.h2.database_path=build/h2db
 #===============================================================================
 #Cassandra properties
 #host list is in the form> 1.1.1.1,1.1.1.2
-kairosdb.datastore.cassandra.cql_host_list=${CASS_HOSTS}
+kairosdb.datastore.cassandra.host_list=${CASS_HOSTS}
 kairosdb.datastore.cassandra.replication_factor=${REPFACTOR}
-kairosdb.datastore.cassandra.keyspace=kairosdb
+kairosdb.datastore.cassandra.keyspace=${KAIROSDB_KEYSPACE}
 
 #For a single metric query this dictates the number of simultaneous cql queries
 #to run (ie one for each row of data).  The larger the cluster the higher you may want
