--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -51,6 +51,10 @@ kairosdb.jetty.static_web_root=webroot
 #kairosdb.jetty.threads.max=2500
 #kairosdb.jetty.threads.keep_alive_ms=10000
 
+# To set the traffic type allowed for the server, change the kairosdb.server.type entry to INGEST, QUERY, or DELETE,
+# or a comma delimited list of two of them to enable different sets of API methods.
+# The default setting is ALL, which will enable all API methods.
+#kairosdb.server.type=ALL
 
 #===============================================================================
 #kairosdb.service.datastore=org.kairosdb.datastore.h2.H2Module
@@ -65,15 +69,29 @@ kairosdb.datastore.h2.database_path=build/h2db
 
 #===============================================================================
 #Cassandra properties
-#host list is in the form> 1.1.1.1,1.1.1.2
-kairosdb.datastore.cassandra.host_list=${CASS_HOSTS}
-kairosdb.datastore.cassandra.replication_factor=${REPFACTOR}
+#host list is in the form> 1.1.1.1:9042,1.1.1.2
+#if the port is omitted it defaults to 9042
+kairosdb.datastore.cassandra.cql_host_list=${CASS_HOSTS}
 kairosdb.datastore.cassandra.keyspace=${KAIROSDB_KEYSPACE}
 
+#Sets the replication for the keyspace.  This is only used the first time Kairos
+#starts up and needs to create the schema in Cassandra.  Later changes
+#to this property have no effect.
+kairosdb.datastore.cassandra.replication={'class': 'SimpleStrategy','replication_factor' : ${REPFACTOR}}
+
 #For a single metric query this dictates the number of simultaneous cql queries
-#to run (ie one for each row of data).  The larger the cluster the higher you may want
+#to run (ie one for each partition key of data).  The larger the cluster the higher you may want
 #this number to be.
 kairosdb.datastore.cassandra.simultaneous_cql_queries=100
+
+# query_reader_threads is the number of threads to use to read results from
+# each cql query.  You may want to change this number depending on your environment
+kairosdb.datastore.cassandra.query_reader_threads=6
+
+# When set, the query_limit will prevent any query reading more than the specified
+# number of data points.  When the limit is reached an exception is thrown and an
+# error is returned to the client.  Set this value to 0 to disable (default)
+#kairosdb.datastore.cassandra.query_limit=10000000
 
 #Size of the row key cache size.  This can be monitored by querying
 #kairosdb.datastore.write_size and filtering on the tag buffer = row_key_index
@@ -89,17 +107,51 @@ kairosdb.datastore.cassandra.string_cache_size=50000
 kairosdb.datastore.cassandra.read_consistency_level=${READ_CONSISTENCY}
 kairosdb.datastore.cassandra.write_consistency_level=${WRITE_CONSISTENCY}
 
+# Set this if this kairosdb node connects to cassandra nodes in multiple datacenters.
+# Not setting this will select cassandra hosts using the RoundRobinPolicy, while setting this will use DCAwareRoundRobinPolicy.
+#kairosdb.datastore.cassandra.local_datacenter=
+
+kairosdb.datastore.cassandra.connections_per_host.local.core=5
+kairosdb.datastore.cassandra.connections_per_host.local.max=100
+
+kairosdb.datastore.cassandra.connections_per_host.remote.core=1
+kairosdb.datastore.cassandra.connections_per_host.remote.max=10
+
+kairosdb.datastore.cassandra.max_requests_per_connection.local=128
+kairosdb.datastore.cassandra.max_requests_per_connection.remote=128
+
+kairosdb.datastore.cassandra.max_queue_size=500
+
 #for cassandra authentication use the following
 #kairosdb.datastore.cassandra.auth.[prop name]=[prop value]
 #example:
-#kairosdb.datastore.cassandra.auth.username=admin
-#kairosdb.datastore.cassandra.auth.password=eat_me
+kairosdb.datastore.cassandra.auth.username=${SCYLLA_U}
+kairosdb.datastore.cassandra.auth.password=${SCYLLA_P}
+
+# Set this property to true to enable SSL connections to your C* cluster.
+# Follow the instructions found here: http://docs.datastax.com/en/developer/java-driver/3.1/manual/ssl/
+# to create a keystore and pass the values into Kairos using the -D switches
+kairosdb.datastore.cassandra.use_ssl=false
 
 #the time to live in seconds for datapoints. After this period the data will be
 #deleted automatically. If not set the data will live forever.
 #TTLs are added to columns as they're inserted so setting this will not affect
 #existing data, only new data.
 #kairosdb.datastore.cassandra.datapoint_ttl=31536000
+
+# Set this property to true to align each datapoint ttl with its timestamp.
+# example: datapoint_ttl is set to 30 days; ingesting a datapoint with timestamp '25 days ago'
+#   - Without this setting, the datapoint will be stored for 30 days from now on, so it can be queried for 30 + 25 days which may not be the intended behaviour using a 30 days ttl
+#   - Setting this property to true will only store this datapoint for 5 days (30 - 25 days).
+# default: false
+# Additional note: consider setting force_default_datapoint_ttl as well for full control
+kairosdb.datastore.cassandra.align_datapoint_ttl_with_timestamp=false
+
+# Set this property to true to force the default datapoint_ttl for all ingested datapoints, effectively ignoring their ttl informations if they provide them.
+# This gives you full control over the timespan the datapoints are stored in K*.
+# default: false
+# Additional note: consider setting align_datapoint_ttl_with_timestamp as well for full control
+kairosdb.datastore.cassandra.force_default_datapoint_ttl=false
 
 #===============================================================================
 # Remote datastore properties
@@ -123,8 +175,8 @@ kairosdb.datastore.remote.schedule=0 */30 * * * ?
 # delay up to 10 minutes.
 kairosdb.datastore.remote.random_delay=0
 
-# Optional prefix filter for remote module.  Only metrics that start with this
-# value are forwarded on.
+# Optional prefix filter for remote module. If present, only metrics that start with the
+# values in this comma-separated list are forwarded on.
 #kairosdb.datastore.remote.prefix_filter=
 
 #===============================================================================
@@ -171,11 +223,9 @@ kairosdb.log.queries.greater_than=60
 # from inserting data witch each query
 kairosdb.queries.aggregate_stats=false
 
-
 #===============================================================================
 # Health Checks
 kairosdb.service.health=org.kairosdb.core.health.HealthCheckModule
-#kairosdb.service.rollups=org.kairosdb.rollup.RollUpModule
 
 #Response code to return from a call to /api/v1/health/check
 #Some load balancers want 200 instead of 204
@@ -185,10 +235,10 @@ kairosdb.health.healthyResponseCode=204
 #===============================================================================
 #Ingest queue processor
 
-#kairosdb.queue_processor=org.kairosdb.core.queue.MemoryQueueProcessor
+#kairosdb.queue_processor.class=org.kairosdb.core.queue.MemoryQueueProcessor
 
 
-kairosdb.queue_processor=org.kairosdb.core.queue.FileQueueProcessor
+kairosdb.queue_processor.class=org.kairosdb.core.queue.FileQueueProcessor
 
 # The number of data points to send to Cassandra
 # For the best performance you will want to set this to 10000 but first
@@ -204,10 +254,16 @@ kairosdb.queue_processor=org.kairosdb.core.queue.FileQueueProcessor
 kairosdb.queue_processor.batch_size=200
 
 # If the queue doesn't have at least this many items to process the process thread
-# will pause for .5 seconds to wait for more before grabbing data from the queue.
+# will pause for {min_batch_wait} milliseconds to wait for more before grabbing data from the queue.
 # This is an attempt to prevent chatty inserts which can cause extra load on
 # Cassandra
 kairosdb.queue_processor.min_batch_size=100
+
+# If the number of items in the process queue is less than {min_batch_size} the
+# queue processor thread will wait this many milliseconds before flushing the data
+# to C*.  This is to prevent single chatty inserts.  This only has effect when
+# data is trickling in to Kairos.
+kairosdb.queue_processor.min_batch_wait=500
 
 # The size (number of data points) of the memory queue
 # In the case of FileQueueProcessor:
@@ -234,6 +290,52 @@ kairosdb.queue_processor.page_size=52428800
 #Number of threads allowed to insert data to the backend
 #CassandraDatastore is the only use of this executor
 kairosdb.ingest_executor.thread_count=10
+
+#===============================================================================
+# Roll-ups
+#kairosdb.service.rollups=org.kairosdb.rollup.RollUpModule
+
+# How often the Roll-up Manager queries for new or updated roll-ups
+#kairosdb.rollups.server_assignment.check_update_delay_millseconds=10000
+#===============================================================================
+
+#===============================================================================
+# Host Manager Service
+
+# How often the host service checks for active hosts
+kairosdb.host_service_manager.check_delay_time_millseconds=60000
+
+# How long before a host is considered inactive
+kairosdb.host_service_manager.inactive_time_seconds=300
+#===============================================================================
+
+#===============================================================================
+#Demo and stress modules
+
+# The demo module will load one years of data into kairos.  The code goes back
+# one year from the present and inserts data every minute.  The data makes a
+# pretty little sign wave.
+
+#kairosdb.service.demo=org.kairosdb.core.demo.DemoModule
+kairosdb.demo.metric_name=demo_data
+# number of rows = number of host tags to add to the data. Setting the number_of_rows
+# to 100 means 100 hosts reporting data every minutes, each host has a different tag.
+kairosdb.demo.number_of_rows=100
+kairosdb.demo.ttl=0
+
+
+# This just inserts data as fast as it can for the duration specified.  Good for
+# stress testing your backend.  I have found that a single Kairos node will only
+# send about 500k/sec because of a limitation in the cassandra client.
+
+#kairosdb.service.blast=org.kairosdb.core.blast.BlastModule
+# The number_of_rows translates into a random number between 0 and number_of_rows
+# that is added as a tag to each data point.  Trying to simulate a even distribution
+# data in the cluster.
+kairosdb.blast.number_of_rows=1000
+kairosdb.blast.duration_seconds=30
+kairosdb.blast.metric_name=blast_load
+kairosdb.blast.ttl=600
 
 #===============================================================================
 # Settings for the carbon server protocol handler
