--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -125,13 +125,13 @@ kairosdb.datastore.cassandra.max_queue_size=500
 #for cassandra authentication use the following
 #kairosdb.datastore.cassandra.auth.[prop name]=[prop value]
 #example:
-kairosdb.datastore.cassandra.auth.username=${SCYLLA_U}
+kairosdb.datastore.cassandra.auth.user_name=${SCYLLA_U}
 kairosdb.datastore.cassandra.auth.password=${SCYLLA_P}
 
 # Set this property to true to enable SSL connections to your C* cluster.
 # Follow the instructions found here: http://docs.datastax.com/en/developer/java-driver/3.1/manual/ssl/
 # to create a keystore and pass the values into Kairos using the -D switches
-kairosdb.datastore.cassandra.use_ssl=false
+kairosdb.datastore.cassandra.use_ssl=true
 
 #the time to live in seconds for datapoints. After this period the data will be
 #deleted automatically. If not set the data will live forever.
