--- a/kairosdb.properties
+++ b/kairosdb.properties
@@ -42,8 +42,8 @@ kairosdb.jetty.static_web_root=webroot
 
 #To enable http basic authentication uncomment the following lines and specify
 #the user name and password for authentication.
-#kairosdb.jetty.basic_auth.user=
-#kairosdb.jetty.basic_auth.password=
+kairosdb.jetty.basic_auth.user=${BASIC_AUTH_USER}
+kairosdb.jetty.basic_auth.password=${BASIC_AUTH_PASSWORD}
 
 # To enable thread pooling uncomment the following lines and specify the limits
 #kairosdb.jetty.threads.queue_size=6000
